fixed overlap issue on landing page

--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,11 @@ font-family: monospace;
 
 body {
   background-color: black;
+  margin: 0 auto;
 }
 
 h1 {
-  font-size: 80pt;
+  font-size: 60pt;
   padding: 0;
   margin: 0 auto;
 }
@@ -65,6 +66,7 @@ a {
 .inner {
   position: relative;
   padding: 0;
+  padding-right: 13px;
   top: 20px;
 }
 
@@ -72,4 +74,5 @@ a {
   text-align: center;
   position: relative;
   bottom: 20px;
+  padding-right: 13px;
 }
